<resources>
    <string name="app_name">lab3a</string>
    <string name="action_settings">Settings</string>
    <string name="dec">.</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="sub">-</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_7">7</string>
    <string name="eq">=</string>
    <string name="div">Div</string>
    <string name="x">x</string>
    <string name="chng">chng</string>
    <string name="mod">%</string>
    <string name="sqr">Sqr</string>
    <string name="_1">1</string>
    <string name="c">c</string>
    <string name="_4">4</string>
    <string name="chsign">±</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
</resources>
