<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="28dp" />

    <Button
        android:id="@+id/b7"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/b4"
        app:layout_constraintEnd_toStartOf="@+id/b8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b1"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/bChS"
        app:layout_constraintEnd_toStartOf="@+id/b2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/b0"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bDec"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bChS"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <Button
        android:id="@+id/b5"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toStartOf="@+id/b6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b8" />

    <Button
        android:id="@+id/b8"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintEnd_toStartOf="@+id/b9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bChS"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:text="@string/chsign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/b9"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/b6"
        app:layout_constraintEnd_toStartOf="@+id/bSqr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bDec"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:text="@string/dec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b="
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <Button
        android:id="@+id/b3"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/bDec"
        app:layout_constraintEnd_toStartOf="@+id/b-"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/b6" />

    <Button
        android:id="@+id/bSqr"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="operatorClick"
        android:text="@string/sqrt"
        app:layout_constraintBottom_toTopOf="@+id/b+"
        app:layout_constraintEnd_toStartOf="@+id/bC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bC"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="operatorClick"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/bDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bSqr"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b%"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="operatorClick"
        android:text="@string/mod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b="
        app:layout_constraintTop_toBottomOf="@+id/bMult" />

    <Button
        android:id="@+id/bMult"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="operatorClick"
        android:text="@string/x"
        app:layout_constraintBottom_toTopOf="@+id/b%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b-"
        app:layout_constraintTop_toBottomOf="@+id/bDiv" />

    <Button
        android:id="@+id/bDiv"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="operatorClick"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/bMult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b+"
        app:layout_constraintTop_toBottomOf="@+id/bC" />

    <Button
        android:id="@+id/b6"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintEnd_toStartOf="@+id/b+"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b9"
        android:onClick="numClick" />

    <Button
        android:id="@+id/b="
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="operatorClick"
        android:text="@string/eq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b%"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bDec"
        app:layout_constraintTop_toBottomOf="@+id/b-" />

    <Button
        android:id="@+id/b-"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="operatorClick"
        android:text="@string/sub"
        app:layout_constraintBottom_toTopOf="@+id/b="
        app:layout_constraintEnd_toStartOf="@+id/bMult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b3"
        app:layout_constraintTop_toBottomOf="@+id/b+" />

    <Button
        android:id="@+id/b+"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="operatorClick"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/b-"
        app:layout_constraintEnd_toStartOf="@+id/bDiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b6"
        app:layout_constraintTop_toBottomOf="@+id/bSqr" />

    <Button
        android:id="@+id/b2"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/b0"
        app:layout_constraintEnd_toStartOf="@+id/b3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/b4"
        android:layout_width="67dp"
        android:layout_height="56dp"
        android:onClick="numClick"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toStartOf="@+id/b5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="647dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="22dp"
        android:layout_marginStart="627dp"
        android:layout_marginLeft="627dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:layout_marginBottom="361dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

</androidx.constraintlayout.widget.ConstraintLayout>